Verson 1.1.1 (2013-03-22):
* Allow specifying which Freshdesk filter to use (Issue #6, steddy).

Version 1.1.0 (2013-03-11):
* Add Freshdesk support (Issue #5, ntemple).

Version 1.0.2 (2011-09-10):
* Use "SupportNotifications" rule if available.

Verson 1.0.1:
* Obtain rule/view id to use from Zendesk (Issue #1, christianaj).
* Do not schedule status update before logging in
* Smaller popup