@@ -11,6 +11,7 @@
       <input type="password" name="master_password" id="master_password"></input>
       <input type="submit" name="submit_button" value="OK" />
       <p id="error"></p>
+      <p><a href="#" id="reset_link">Reset</a></p>
     </form>
   </body>
 </html>
