@@ -1,5 +1,6 @@
 Verson 1.1.1 (2013-03-22):
 * Allow specifying which Freshdesk filter to use (Issue #6, steddy).
+* Make it possible to reset the extension if you have forgotten the master password.
 
 Version 1.1.0 (2013-03-11):
 * Add Freshdesk support (Issue #5, ntemple).
